--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       </div>
 
       <script src="header.js"></script>
+
+      <!-- State filter Dropdown Menu -->
+        add here
+      <!-- State filter Dropdown Menu end -->
         
       <table class="table-sortable">
           <thead>
