--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div class="column">
           <div class="card">
             <h3>
+              <img align="right" src="images/info.svg" height="30" width="30"><br>
               About UCMD
             </h3>
             <p>
@@ -55,6 +56,7 @@
         <div class="column">
           <div class="card">
             <h3>
+              <img align="right" src="images/insight.svg" height="30" width="30"><br>
               Actionable Insights
             </h3>
             <p>
@@ -66,6 +68,7 @@
           <div class="card">
 
             <h3>
+              <img align="right" src="images/mission-accomplished.svg" height="35" width="35"><br>
               Mission
             </h3>
             <p>
@@ -78,6 +81,7 @@
           <div class="card">
 
             <h3>
+              <img align="right" src="images/telescope.svg" height="40" width="40"><br>
               Futurescope
             </h3>
             <p>
