--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
  <br><br>
  <div class="footer">
    <p>Copyright © 2020 Concept. All rights reserved. Dashboard for UCM India</p>
-   <p><a href="kishan.kumar22@outlook.com">Built by Blitzkrieg - HackJaipur_MLH</a></p>
+   <p><a href="https://github.com/kishankrs/Blitzkrieg_HackJaipur">Built by Blitzkrieg - HackJaipur_MLH</a></p>
    </div>
  <!-- footer -->
 </html>
